feat(login): Add a login page, login and logout action

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -7,12 +7,12 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/logo/pizza64.png">
-  <title>Pizza</title>
+  <title>Pizza'122</title>
 </head>
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
+    Vous devez activer Javascript pour faire fonctionner cette application
   </noscript>
   <div id="root"></div>
 </body>
